# openapi.json
@@ -303,6 +303,241 @@
         }
       }
     },
+    "/genres/new": {
+      "post": {
+        "tags": ["Genres"],
+        "summary": "Create a new genre",
+        "description": "Enter the required information to add a new genre to the genres collection",
+        "responses": {
+          "201": {
+            "description": "New Genre created",
+            "content": {
+              "application/json": {
+                "example": {
+                  "_id": "uniqueId",
+                  "genre": "Action"
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Error message"
+          },
+          "403": {
+            "description": "Access denied"
+          },
+          "412": {
+            "description": "Precondition Failed"
+          },
+          "500": {
+            "description": "Failed to create a new genre"
+          }
+        },
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "example": {
+                "genre": "Action"
+              }
+            }
+          }
+        }
+      }
+    },
+    "/genres/all": {
+      "get": {
+        "tags": ["Genres"],
+        "summary": "Get all genres",
+        "description": "Get an array of all movie genres in the collection",
+        "responses": {
+          "200": {
+            "description": "A list of genres.",
+            "content": {
+              "application/json": {
+                "example": {
+                  "_id": "uniqueId",
+                  "genre": "Action"
+                }
+              }
+            }
+          },
+          "403": {
+            "description": "Access denied"
+          },
+          "500": {
+            "description": "Error message"
+          }
+        }
+      }
+    },
+    "/genres/{id}": {
+      "get": {
+        "tags": ["Genres"],
+        "summary": "Get a genre by ID",
+        "description": "This will return a single genre by ID",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Successful Operation",
+            "content": {
+              "application/json": {
+                "example": {
+                  "_id": "uniqueId",
+                  "genre": "Action"
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "403": {
+            "description": "Access denied"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "500": {
+            "description": "Error message"
+          }
+        }
+      }
+    },
+    "/genres/genre/{genre}": {
+      "get": {
+        "tags": ["Genres"],
+        "summary": "Get a genre by genre name",
+        "description": "This will return a single movie genre by name",
+        "parameters": [
+          {
+            "name": "genre",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Successful Operation",
+            "content": {
+              "application/json": {
+                "example": {
+                  "_id": "uniqueId",
+                  "genre": "Action"
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "403": {
+            "description": "Access denied"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "500": {
+            "description": "Error message"
+          }
+        }
+      }
+    },
+    "/genres/update/{id}": {
+      "put": {
+        "tags": ["Genres"],
+        "summary": "Update a genre by ID",
+        "description": "This will update a single genre by ID",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Successfully updated",
+            "content": {
+              "application/json": {
+                "example": {
+                  "_id": "uniqueId",
+                  "genre": "Action"
+                }
+              }
+            }
+          },
+          "304": {
+            "description": "Not updated"
+          },
+          "400": {
+            "description": "Error message"
+          },
+          "403": {
+            "description": "Access denied"
+          }
+        },
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "example": {
+                "genre": "Action"
+              }
+            }
+          }
+        }
+      }
+    },
+    "/genres/delete/{id}": {
+      "delete": {
+        "tags": ["Genres"],
+        "summary": "Delete a genre by ID",
+        "description": "This will delete a single genre by ID. This action cannot be reversed.",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "202": {
+            "description": "Genre Successfully deleted"
+          },
+          "400": {
+            "description": "Genre Not Deleted"
+          },
+          "403": {
+            "description": "Access denied"
+          },
+          "404": {
+            "description": "Genre Not Found"
+          },
+          "500": {
+            "description": "Error message"
+          }
+        }
+      }
+    },
     "/movies/new": {
       "post": {
         "tags": ["Movies"],
